# pygame-labbing

./: README.md
menus/: README.md  pyproject.toml
menus/src/menus/: main.py
