[project]
name = "menus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saffronner", email = "saffronner8@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
